[package]
license = "MIT"
description = "Fail with multiple errors, istead of only the first."
name = "error-trees"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/wuerges/error-trees"
keywords = ["errors"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
